--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <base href="/marutechweb/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles-5INURTSO.css">
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="/marutechweb/styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-5CFQRCPP.js" type="module"></script>
-<script src="main-RGUDMSIA.js" type="module"></script></body>
+<script src="/marutechweb/polyfills-5CFQRCPP.js" type="module"></script><script src="/marutechweb/main-RGUDMSIA.js" type="module"></script></body>
 </html>
