--- a/browser/index.html
+++ b/browser/index.html
@@ -9,7 +9,24 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<link rel="stylesheet" href="/marutechweb/styles-IRV2JRNT.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/marutechweb/styles-IRV2JRNT.css"></noscript></head>
+<link rel="stylesheet" href="/marutechweb/styles-IRV2JRNT.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/marutechweb/styles-IRV2JRNT.css"></noscript>
+<script>
+  // Single-Page App redirect for GitHub Pages
+  // This script redirects all 404s to the index page with the correct path.
+  (function() {
+    var redirect = sessionStorage.getItem('redirect');
+    if (redirect) {
+      sessionStorage.removeItem('redirect');
+      history.replaceState(null, null, redirect);
+    }
+    if (location.pathname !== '/marutechweb/' && location.pathname !== '/marutechweb/index.html') {
+      sessionStorage.setItem('redirect', location.pathname);
+      location.replace('/marutechweb/');
+    }
+  })();
+</script>
+
+</head>
 <body>
   <app-root></app-root>
 <script src="/marutechweb/polyfills-5CFQRCPP.js" type="module"></script><script src="/marutechweb/main-P4EMA4H4.js" type="module"></script></body>
